@@ -9,7 +9,7 @@ public class ColorUtil {
     public static final Color GREEN = new Color(0, 255, 0);
 
     public static Color applyOpacity(Color color, float opacity) {
-        opacity = Math.min(Math.max(opacity, 0.0f), 1.0f);
+        opacity = Math.clamp(opacity, 0.0f, 1.0f);
         return new Color(color.getRed(), color.getGreen(), color.getBlue(), (int) (255 * opacity));
     }
 
@@ -32,7 +32,7 @@ public class ColorUtil {
     }
 
     public static Color interpolate(float progress, Color startColor, Color endColor) {
-        progress = Math.min(Math.max(progress, 0.0f), 1.0f);
+        progress = Math.clamp(progress, 0.0f, 1.0f);
         return new Color((int) ((float) startColor.getRed() + progress * (float) (endColor.getRed() - startColor.getRed())), (int) ((float) startColor.getGreen() + progress * (float) (endColor.getGreen() - startColor.getGreen())), (int) ((float) startColor.getBlue() + progress * (float) (endColor.getBlue() - startColor.getBlue())));
     }
 
@@ -57,6 +57,6 @@ public class ColorUtil {
     }
 
     public static Color scale(Color color, float scaleFactor, int alpha) {
-        return new Color(Math.min(Math.max((int) ((float) color.getRed() * scaleFactor), 0), 255), Math.min(Math.max((int) ((float) color.getGreen() * scaleFactor), 0), 255), Math.min(Math.max((int) ((float) color.getBlue() * scaleFactor), 0), 255), alpha);
+        return new Color(Math.clamp((int) ((float) color.getRed() * scaleFactor), 0, 255), Math.clamp((int) ((float) color.getGreen() * scaleFactor), 0, 255), Math.clamp((int) ((float) color.getBlue() * scaleFactor), 0, 255), alpha);
     }
 }
